# burn

./: '  .gitignore  .gitmodules  .rustfmt.toml  ARCHITECTURE.md  CITATION.cff  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  NOTICES.md  POEM.md  PROGRESS_LOGGER_CHANGES.md  PR_DESCRIPTION.md  README.md  _typos.toml  audit.toml  benchmarks.toml  codecov.yml  deny.toml  flake.nix  justfile  katex-header.html  logs.txt  run-before-pr.sh  run-checks.ps1  run-checks.sh  rust-toolchain.toml  rustfmt.toml  test-result.txt
backend-comparison/: Cargo.toml  README.md  build.rs
backend-comparison/benches/: autodiff.rs  binary.rs  conv2d.rs  conv3d.rs  conv_transpose2d.rs  conv_transpose3d.rs  custom_gelu.rs  data.rs  linear.rs  load_record.rs  matmul.rs  matmul_fused.rs  max_pool2d.rs  reduce.rs  resnet.rs  unary.rs
backend-comparison/src/: lib.rs
backend-comparison/src/burnbenchapp/: auth.rs  base.rs  mod.rs  model.rs  progressbar.rs  reports.rs  runner.rs
backend-comparison/src/persistence/: base.rs  mod.rs  system_info.rs
burn/: Cargo.toml  assets
burn-autodiff/: Cargo.toml  README.md
burn-autodiff-old/: Cargo.toml  README.md
burn-autodiff-old/src/: lib.rs
burn-autodiff-old/src/graph/: converter.rs  grad.rs
burn-autodiff-old/src/ops/: creation.rs  module.rs
burn-autodiff-old/src/tensor/: ad.rs  base.rs
burn-autodiff-old/src/tests/: add.rs  complex.rs  index.rs  matmul.rs  mul.rs  reshape.rs  softmax.rs
burn-autodiff/src/: backend.rs  grads.rs  lib.rs  tensor.rs  utils.rs
burn-autodiff/src/checkpoint/: base.rs  builder.rs  mod.rs  retro.rs  retro_forward.rs  state.rs  states.rs  tests.rs  tests_ops.rs  tmp
burn-autodiff/src/graph/: backward.rs  base.rs  checkpoint.rs  grad.rs  mod.rs  node.rs  ops.rs  requirement.rs  traversal.rs
burn-autodiff/src/ops/: activation.rs  backward.rs  base.rs  binary.rs  bool_tensor.rs  int_tensor.rs  macros.rs  maxmin.rs  mod.rs  module.rs  tensor.rs  tensor_x.rs  unary.rs
burn-autodiff/src/tensor/: ad.rs  base.rs  mod.rs
burn-autodiff/src/tests/: abs.rs  adaptive_avgpool1d.rs  adaptive_avgpool2d.rs  add.rs  aggregation.rs  avgpool1d.rs  avgpool2d.rs  backward.rs  broadcast.rs  cat.rs  complex.rs  conv1d.rs  conv2d.rs  conv_transpose1d.rs  conv_transpose2d.rs  cos.rs  cross_entropy.rs  div.rs  erf.rs  exp.rs  gather_scatter.rs  gelu.rs  gradients.rs  index.rs  index_select.rs  index_select_dim.rs  log.rs  log1p.rs  mask.rs  matmul.rs  maxmin.rs  maxpool1d.rs  maxpool2d.rs  mod.rs  mse.rs  mul.rs  multithread.rs  neg.rs  pow.rs  recip.rs  (+11 more)
burn-benchmark/: Cargo.toml  README.md
burn-benchmark/benches/: binary.rs  data.rs  matmul.rs  unary.rs
burn-benchmark/src/: benchmark.rs  lib.rs
burn-candle/: Cargo.toml  README.md  documenting-candle.txt
burn-candle/src/: backend.rs  element.rs  lib.rs  tensor.rs
burn-candle/src/ops/: activation.rs  base.rs  bool_tensor.rs  candle_utils.rs  int_tensor.rs  mod.rs  module.rs  (+1 more)
burn-common/: Cargo.toml  README.md
burn-common/src/: benchmark.rs  id.rs  lib.rs  network.rs  rand.rs  reader.rs  stub.rs
burn-compute/: Cargo.toml  README.md
burn-compute/src/: autotune_server.rs  channel.rs  client.rs  compute.rs  id.rs  lib.rs  memory_management.rs  mpsc.rs  server.rs  storage.rs
burn-compute/tests/: integration_test.rs
burn-core/: Cargo.toml  README.md  build.rs
burn-core/src/: backend.rs  config.rs  lib.rs  record.rs
burn-core/tests/: derive_config.rs  derive_module.rs  derive_record.rs  record_bin.rs  record_resilience.rs
burn-dataset/: .gitignore  Cargo.toml  README.md
burn-dataset/examples/: speech_commands.rs
burn-dataset/src/: lib.rs
burn-derive/: Cargo.toml  README.md
burn-derive/src/: display.rs  field.rs  lib.rs  param.rs
burn-fusion/: Cargo.toml
burn-fusion/src/: backend.rs  client.rs  fusion.rs  handle.rs  lib.rs  processor.rs  server.rs  tensor.rs
burn-import/: Cargo.toml  README.md  SUPPORTED-ONNX-OPS.md  build.rs  de-expanded.rs
burn-import/onnx-tests/: Cargo.toml  README.md  build.rs
burn-import/pytorch-tests/: Cargo.toml  build.rs  build.rs_off  expand.rs
burn-import/src/: formater.rs  formatter.rs  lib.rs  logger.rs  main.rs
burn-import/tests/: onnx_tests.rs
burn-ndarray/: Cargo.toml  README.md  build.rs
burn-ndarray/src/: backend.rs  element.rs  lib.rs  module_ops.rs  parallel.rs  shape.rs  sharing.rs  stubs.rs  tensor.rs  tensor_ops.rs
burn-ndarray/tests/: no_std_checks.rs
burn-no-std-tests/: Cargo.toml  README.md
burn-no-std-tests/src/: conv.rs  lib.rs  mlp.rs  model.rs
burn-no-std-tests/tests/: integration_test.rs
burn-tch/: Cargo.toml  README.md  build.rs
burn-tch/examples/: simple-add.rs
burn-tch/src/: backend.rs  element.rs  lib.rs  module_ops.rs  tensor.rs  tensor_ops.rs
burn-tensor/: Cargo.toml  README.md  env.bash
burn-tensor-testgen/: Cargo.toml  README.md
burn-tensor-testgen/src/: lib.rs
burn-tensor/examples/: autodiff_simple.rs
burn-tensor/src/: init.rs  lib.rs
burn-tensor/tests/: integration_test.rs
burn-train/: Cargo.toml  README.md
burn-train/src/: components.rs  lib.rs  pool.rs  util.rs
burn-vision/: Cargo.toml
burn-vision/src/: io.rs  lib.rs  transforms.rs
burn-wgpu/: Cargo.toml  README.md
burn-wgpu/benches/: binary.rs  conv2d.rs  data.rs  fused_elemwise.rs  matmul.rs  reduction.rs  unary.rs
burn-wgpu/src/: backend.rs  benchmark.rs  buffer.rs  context.rs  device.rs  element.rs  fusion.rs  graphics.rs  kernel.rs  lib.rs  pool.rs  runtime.rs  tune.rs
burn/examples/: mnist.rs
burn/src/: config.rs  lib.rs  macros.rs
burn/tests/: derive_config.rs  derive_module.rs
crates/burn-autodiff/: Cargo.toml
crates/burn-backend/: Cargo.toml  README.md
crates/burn-backend-extension/: Cargo.toml  README.md
crates/burn-backend-tests/: Cargo.toml  README.md  cubecl.toml
crates/burn-candle/: Cargo.toml  README.md
xtask/: Cargo.toml
xtask/commands/: bench_search.rs
xtask/src/: books.rs  dependencies.rs  logging.rs  main.rs  publish.rs  runchecks.rs  runwasm.rs  utils.rs  vulnerabilities.rs
xtask/tests/: integration_bench.rs
(+8339 files in other folders)
