[package]
authors = ["louisfd <louisfd94@gmail.com>"]
categories = ["science"]
description = "This crate is used to time the execution of various computations, from operation kernels to complex model scenarios."
edition.workspace = true
license.workspace = true
name = "backend-comparison"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/backend-comparison"
version.workspace = true

[features]
# we depend on wgpu and autotune by default because we use the burn-wgpu crate to get system information
default = ["burn/std", "burn/autodiff", "burn/wgpu", "burn/autotune"]
candle-cpu = ["burn/candle"]
candle-cuda = ["burn/candle-cuda"]
candle-metal = ["burn/candle", "burn/metal"]
candle-accelerate = ["burn/candle", "burn/accelerate"]
ndarray = ["burn/ndarray"]
ndarray-blas-accelerate = ["burn/ndarray", "burn/accelerate"]
ndarray-blas-netlib = ["burn/ndarray", "burn/blas-netlib"]
ndarray-blas-openblas = ["burn/ndarray", "burn/openblas"]
tch-cpu = ["burn/tch"]
tch-gpu = ["burn/tch"]
wgpu = ["burn/wgpu", "burn/autotune"]
wgpu-fusion = ["wgpu", "burn/fusion"]

[dependencies]
arboard = { workspace = true }
burn = { path = "../crates/burn", default-features = false }
burn-common = { path = "../crates/burn-common", version = "0.15.0" }
burn-wgpu = { path = "../crates/burn-wgpu", default-features = false, version = "0.15.0" }
clap = { workspace = true }
colored = { workspace = true }
derive-new = { workspace = true }
dirs = { workspace = true }
github-device-flow = { workspace = true }
os_info = { workspace = true }
indicatif = { workspace = true }
percent-encoding = { workspace = true }
rand = { workspace = true }
reqwest = {workspace = true, features = ["blocking", "json"]}
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
sysinfo = { workspace = true, features = ["serde"] }
wgpu = { workspace = true }
wsl = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }

[[bench]]
name = "unary"
harness = false

[[bench]]
name = "binary"
harness = false

[[bench]]
name = "max-pool2d"
path = "benches/max_pool2d.rs"
harness = false

[[bench]]
name = "conv-transpose2d"
path = "benches/conv_transpose2d.rs"
harness = false

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "data"
harness = false

[[bench]]
name = "load-record"
harness = false
path = "benches/load_record.rs"

[[bench]]
name = "custom-gelu"
path = "benches/custom_gelu.rs"
harness = false

[[bench]]
name = "autodiff"
harness = false

[[bin]]
name = "burnbench"
path = "src/bin/burnbench.rs"
