[package]
name = "burn-autodiff-old"
version = "0.5.0"
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
description = "Autodiff backend for burn"
repository = "https://github.com/burn-rs/burn/tree/main/burn-autodiff"
readme = "README.md"
keywords = ["deep-learning", "machine-learning", "data"]
categories = ["science"]
license = "MIT/Apache-2.0"
edition = "2021"

[features]
default = ["export_tests"]
export_tests = ["burn-tensor-testgen"]

[dependencies]
burn-common = {path = "../burn-common"}
burn-tensor = {path = "../burn-tensor"}
burn-tensor-testgen = {path = "../burn-tensor-testgen", optional = true}

derive-new = {workspace = true, features = ["std"]}# Default enables std

