[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "Automatic differentiation backend for the Burn framework"
edition.workspace = true
keywords = ["deep-learning", "machine-learning", "data"]
license.workspace = true
name = "burn-autodiff"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/burn-autodiff"
version.workspace = true

[features]
default = []
export_tests = ["burn-tensor-testgen"]

[dependencies]
burn-common = { path = "../burn-common", version = "0.12.2" }
burn-tensor = { path = "../burn-tensor", version = "0.12.2", default-features = false }
burn-tensor-testgen = { path = "../burn-tensor-testgen", version = "0.12.2", optional = true }

derive-new = { workspace = true }
spin = { workspace = true }

[dev-dependencies]
burn-tensor = { path = "../burn-tensor", version = "0.12.2", default-features = false, features = [
  "export_tests",
] }


