[package]
authors = ["louisfd <louisfd94@gmail.com>"]
categories = ["science"]
description = "Candle backend for the Burn framework"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "data"]
license = "MIT OR Apache-2.0"
name = "burn-candle"
readme = "README.md"
repository = "https://github.com/tracel-ai/burn/tree/main/burn-candle"
version = "0.11.1"

[features]
default = ["std"]
std = []
cuda = ["candle-core/cuda"]
accelerate = ["candle-core/accelerate"]

[dependencies]
derive-new = { workspace = true }
burn-tensor = { path = "../burn-tensor", version = "0.11.1", default-features = false }
half = { workspace = true }

candle-core = { version = "0.3.1" }


[dev-dependencies]
burn-autodiff = { path = "../burn-autodiff", version = "0.11.1", default-features = false, features = [
    "export_tests",
] }
burn-tch = { path = "../burn-tch", version = "0.11.1", default-features = false, features = [
] }
burn-tensor = { path = "../burn-tensor", version = "0.11.1", default-features = false, features = [
    "export_tests",
] }
