[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
categories = []
description = "Common crate for the Burn framework"
edition = "2021"
keywords = []
license = "MIT OR Apache-2.0"
name = "burn-common"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-common"
version = "0.9.0"

[features]
default = ["std"]

std = [
  "rand/std",
]

[dependencies]

# ** Please make sure all dependencies support no_std when std is disabled **

const-random = {workspace = true}
rand = {workspace = true}
spin = {workspace = true}# using in place of use std::sync::Mutex;          
uuid = {workspace = true}

[dev-dependencies]
dashmap = {workspace = true}
