[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
categories = []
description = "Common crate for the Burn framework"
edition = "2021"
keywords = []
license = "MIT OR Apache-2.0"
name = "burn-common"
readme = "README.md"
repository = "https://github.com/tracel-ai/burn/tree/main/burn-common"
version = "0.11.1"

[features]
default = ["std"]

std = ["rand/std"]

wasm-sync = []

[target.'cfg(target_family = "wasm")'.dependencies]
async-trait = { workspace = true }
getrandom = { workspace = true, features = ["js"] }

[dependencies]
# ** Please make sure all dependencies support no_std when std is disabled **

rand = { workspace = true }
spin = { workspace = true }       # using in place of use std::sync::Mutex;          
uuid = { workspace = true }
derive-new = { workspace = true }

[dev-dependencies]
dashmap = { workspace = true }
