[package]
authors = ["Dilshod Tadjibaev (@antimora)"]
categories = []
description = "Common crate for the Burn framework"
edition.workspace = true
keywords = []
license.workspace = true
name = "burn-common"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/burn-common"
version.workspace = true

[features]
default = ["std"]

std = ["rand/std"]

wasm-sync = []

[target.'cfg(target_family = "wasm")'.dependencies]
async-trait = { workspace = true }
getrandom = { workspace = true, features = ["js"] }

[dependencies]
# ** Please make sure all dependencies support no_std when std is disabled **

rand = { workspace = true }
spin = { workspace = true }       # using in place of use std::sync::Mutex;          
uuid = { workspace = true }
derive-new = { workspace = true }

[dev-dependencies]
dashmap = { workspace = true }
